wp-content/themes/MC-genesis-boilerplate/custom.css
/* ... */
a:focus,
a:hover{
	text-decoration: none !important;
}
section{
  margin-top: 8px;
  width: 100%;
}
/* Headers */

/* Color text */
.text-greyblue{
  color: rgb(136, 175, 193);
}
.text-greyblue:hover{
  color: rgb(136, 175, 193);
  opacity: 0.9;
}
.text-warm-purple{
  color: rgb(169, 46, 137);
}
.text-warm-purple:hover{
  color: rgb(169, 46, 137);
  opacity: 0.9;
}
.text-dark-slate-blue{
  color: rgb(43, 39, 103);
}
.text-dark-slate-blue:hover{
  color: rgb(43, 39, 103);
  opacity: 0.9;
}

/* Button color */
.button {
  display: block;
  min-width: 150px;
  margin: 16px;
  padding: 8px 8px;
  box-shadow: 2px 2px 6px 0 rgba(0, 0, 0, 0.22);
  background: #2b2767;
  color: white;
  font-family: 'Noto Sans', sans-serif;
  text-align: center;
  text-transform: uppercase;
}
.button:hover{
  opacity: 0.9;
}
.btn.btn-primary{
	border-radius: none;
}
.btn-greyblue, 
.gform_button.button{
	background-color: rgb(136, 175, 193);
}
.btn-greyblue:hover, 
.gform_button.button:hover{
  background-color: rgb(136, 175, 193);
  opacity: 0.9;
}
.btn-warm-purple{
	background-color: rgb(169, 46, 137);
}
.btn-warm-purple:hover{
  background-color: rgb(169, 46, 137);
  opacity: 0.9;
}
.btn-dark-slate-blue{
	background-color: rgb(43, 39, 103);
  color:#fff;
}
.btn-dark-slate-blue:hover{
  background-color: rgb(43, 39, 103);
  opacity: 0.9;
}
.btn-long{
  min-width: 100%
}
.btn-short{
  width: 120px;
  margin: 10px 0;
}


/* ## Main Container
--------------------------------------------- */

.site-inner {
  padding-top: 0px;
} 
.container {
  max-width: 1440px;!important
  max-width: 100%;
  width: 100%;
}


/* ## Main Navigation
--------------------------------------------- */

/* Header */
h1.tk-museo{
	font-family: "museo",serif;
	font-size: 6.5rem;
	color: #2b2767;
	font-weight: 700;
	padding: 0.3em 0;
}
.navpanel .wrapper {
	background: white;
}
.navpanel {
	background: none;
	padding-left: 15px;
}
.logogroup {
	margin-left: 15px;
}
#google_translate_desktop{
    margin: 0 auto;
	z-index: 1;
}
/*hides title of google translate widget */
#text-2 > div > h3.widget-title {
  display: none;
}

#text-2{
  margin-top: 100px;
}

/* Menu */
.main-menu ul {
  max-width: 934px;
	border-top: 0.5px solid rgba(136, 175, 193, 0.8);
	border-bottom: 0.5px solid rgba(136, 175, 193, 0.8);
	border-left: 0.5px solid rgba(136, 175, 193, 0.8);
	font-family: 'Noto Sans', sans-serif;
}
.main-menu li{
	min-width: 16%;
  border-right: 0.5px solid rgba(136, 175, 193, 0.8);
}
.main-menu li a{
	display: block;
	padding: 15px 15px;
	color:#2b2767;
	font-size: 0.7em;
	text-align: center;
}
.main-menu li a:hover{
	background-color: rgba(136, 175,193, 0.3);
	text-decoration: none;
}
#stickem {
  background: none;
  z-index: 9;
  position: fixed;
  width: 100%;
  top:0;
}

/* Drop down menu - jquery in assets/js/mccoder.js */
.menu-test {
  position: relative;
}
.sub-menu {
  position: absolute;
  min-width:187px;
  background: white;
  z-index: 999999;
}
.sub-menu {
  display: none;
}
.reveal {
  display: block;
}
ul.shift { 
  position:absolute;
  top: 0%;
  left: 100%;
}
/*the arrow for menu items with children that are not top level*/
#submenuarrow {
  position: absolute;
  top:15px;
  right: 0px;
}


/* Left Sidebar */
#left-sticky{
	float: right;
	overflow: hidden;
	height: 100%;
	box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.15);
}
.logo {
	display: block;
	margin: 0 auto;
	padding: 5% 5%;
	margin-bottom: 33px;	
}
 #left-sticky h2 {
	padding: 8%;
	border-top: 0.5px solid rgba(136, 175, 193, 0.8);
	margin:0;
  color: #2b2767;
  font-family: "museo",serif;
  font-size: 22px;
  font-weight: 100;
}

/* Hours */
.hourblock {
  background-color: rgba(136, 175, 193, 0.1);
}
.hourblock h2{
  padding: 8%;
  border-top: 0.5px solid rgba(136, 175, 193, 0.8);
  margin: 0;
  color: #2b2767;
  font-family: "museo",serif;
  font-size: 22px;
  font-weight: 100;
}
.hour-inner{
	padding: 0 15%;
	color: #2b2767;
	font-family: 'Noto Sans', sans-serif;
	font-size: 0.8em;
}
.hour-inner li{
	margin-bottom: 16px;
}
.dow, .hours{
	padding:0;
}
.current-hours{
	color: #a92e89;
}
/* mobile widget for hours & language */
#hours_language_mobile {
    display: none;
}
.library-hours-arrows{
  border: solid #a92e89;
  border-width: 0 2px 2px 0;
  display: inline-block;
  padding: 3px;
}
.library-hours-up {
  transform: rotate(-135deg);
  -webkit-transform: rotate(-135deg);
}
.library-hours-down {
  transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
}
/* only show on mobile */
@media screen and (max-width: 640px){
    #hours_language_mobile {
      display: block;
    }
    #google_translate_mobile{
      padding-top: 10px;
    }
}





/* Connect Links */
.connect  {
  text-align: left;
  padding: 0 5%;
  list-style: none;
}
.connect a {
  color:#2b2767;
  display: block;
  height: 30%; 
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}
.connect a:hover {
  color: #66619c;
  text-decoration: none;
}
.connect li i{
  padding: 4px 8px 4px 8px;
}
.connect li span{
  font-family: 'Noto Sans', sans-serif;
  font-size: 13px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  line-height: 1.46;
  letter-spacing: normal;
}

/* Social */
.social {
 padding: 4px 8px 4px 4px;
}
.sidebar address {
	max-width: 212px;
	padding: 8px 16px;
	margin: 12px 0 30px;
  color: #2b2767;	
	font-size: 0.8em;
	text-align: left;
}
.address{
	display:block;
	margin-bottom: 10px;
}

/* Sidebar Fixed Positiions */   
#genesis-sidebar-secondary {
  z-index: 99999;
}
.wsoffcanvasopener .wsmenu {
  z-index: 999999;
 }
 #genesis-content .sidebar-primary {
  max-width: 308px;
}
#genesis-content .content {
  width: 801px;
  padding: 12px;
}
#genesis-content .content-sidebar-sidebar .content-sidebar-wrap,
.sidebar-content-sidebar .content-sidebar-wrap,
.sidebar-sidebar-content .content-sidebar-wrap {
  max-width: 1139px;
}
#genesis-sidebar-secondary > section { 
  display: none;
}
/* ... */

